--- a/ss6_jpa/bai__tap/ung_dung_blog/src/main/webapp/WEB-INF/views/fragment/header.html
+++ b/ss6_jpa/bai__tap/ung_dung_blog/src/main/webapp/WEB-INF/views/fragment/header.html
@@ -49,8 +49,7 @@
                             </li>
                         </ul>
                         <form action="/search" method="get">
-                            <label>Name Blog: </label>
-                            <input type="text" name="name">
+                            <input type="text" placeholder="Input name blog" name="name">
                             <button class="btn btn-info">Search</button>
                         </form>
                     </div>
