--- a/ss8_validation/bai_tap/validate_form_thong_tin_bai_hat/src/main/resources/templates/edit.html
+++ b/ss8_validation/bai_tap/validate_form_thong_tin_bai_hat/src/main/resources/templates/edit.html
@@ -22,7 +22,7 @@
             <td><input id="type" type="text" required th:field="*{typeOfMusic}"></td>
         </tr>
         <tr>
-            <td><label for="path">Singer</label></td>
+            <td><label for="path">Path</label></td>
             <td><input id="path" type="text" required th:field="*{path}"></td>
         </tr>
         <tr>
